# MapPilot

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TEST_PLAN.md  build_all.sh  docker-compose.dev.yml  docker-compose.yml  full_functional_test.py  generate_paper_figures.py  generate_paper_figures_fast.py  mapping.sh  planning.sh  readme.md  save_map.sh  test_all_modules.py  test_all_modules_v2.py  test_full_pipeline.py  test_habitat_llm.py  test_slow_path.py
.claude/: settings.local.json
config/: cyclonedds.xml  qos_profiles.yaml  robot_config.yaml  semantic_perception.yaml  semantic_planner.yaml  topic_contract.yaml
docs/: TODO.md  (+29 more)
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/config/: omniDir.yaml  standard.yaml
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/local_planner/test/: test_planner_perf.cpp
src/base_autonomy/terrain_analysis/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/terrain_analysis_ext/: CMakeLists.txt  package.xml
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/base_autonomy/visualization_tools/: CMakeLists.txt  package.xml
src/base_autonomy/visualization_tools/launch/: visualization_tools.launch
src/base_autonomy/visualization_tools/scripts/: realTimePlot.py
src/base_autonomy/visualization_tools/src/: visualizationTools.cpp
src/global_planning/PCT_planner/: CMakeLists.txt  README.md  package.xml
src/global_planning/PCT_planner/launch/: mapping_launch.py  system_launch.py  test_planning_launch.py
src/global_planning/PCT_planner/planner/config/: param.py
src/global_planning/PCT_planner/planner/lib/: CMakeLists.txt
src/global_planning/PCT_planner/planner/lib/src/a_star/: a_star_search.cc
src/global_planning/PCT_planner/planner/scripts/: check_map.py  fake_localization.py  global_planner.py  pct_planner_astar.py  planner_wrapper.py
src/global_planning/PCT_planner/planner/scripts/utils/: convertion.py  vis_ros.py
src/global_planning/PCT_planner/tomography/config/: scene_common.py
src/global_planning/PCT_planner/tomography/scripts/: kernels.py  tomogram.py  tomography.py  visualize_tomogram.py
src/nav_core/: CMakeLists.txt  package.xml
src/nav_core/bindings/: py_nav_core.cpp
src/nav_core/include/nav_core/: local_planner_core.hpp  path_follower_core.hpp  pct_adapter_core.hpp  types.hpp
src/nav_core/test/: test_benchmark.cpp  test_local_planner_core.cpp  test_param_sensitivity.cpp  test_path_edge_cases.cpp  test_path_follower_core.cpp  test_pct_adapter_core.cpp  test_validation.cpp
src/ota_daemon/: CMakeLists.txt
src/ota_daemon/config/: artifact_paths.yaml  ota_daemon.yaml
src/ota_daemon/deploy/: install.sh  ota_daemon.service  reload_dog_model.sh
src/ota_daemon/src/: main.cpp  ota_config.cpp  ota_device.cpp  ota_file_ops.cpp  ota_service.cpp  ota_service.hpp  ota_update.cpp  reporter.cpp  reporter.hpp  utils.cpp  utils.hpp
src/remote_monitoring/: BUILD_STATUS.md  CMakeLists.txt  PLAN.md  README.md  VERIFY.md  package.xml
src/remote_monitoring/config/: grpc_gateway.yaml
src/remote_monitoring/include/remote_monitoring/: grpc_gateway.hpp  status_aggregator.hpp  webrtc_bridge.hpp
src/remote_monitoring/include/remote_monitoring/core/: event_buffer.hpp  flight_recorder.hpp  geofence_monitor.hpp  health_monitor.hpp  idempotency_cache.hpp  lease_manager.hpp  localization_scorer.hpp  mode_manager.hpp  safety_gate.hpp  service_orchestrator.hpp  task_manager.hpp
src/remote_monitoring/include/remote_monitoring/services/: control_service.hpp  data_service.hpp  system_service.hpp
src/remote_monitoring/scripts/: apply_firmware.sh  ble_peripheral.py  ble_peripheral.service  test_integration.py
src/remote_monitoring/src/: grpc_gateway.cpp  status_aggregator.cpp  webrtc_bridge.cpp
src/remote_monitoring/src/core/: event_buffer.cpp  flight_recorder.cpp  geofence_monitor.cpp  health_monitor.cpp  lease_manager.cpp  localization_scorer.cpp  mode_manager.cpp  safety_gate.cpp  service_orchestrator.cpp  task_manager.cpp
src/remote_monitoring/src/services/: control_service.cpp  data_service.cpp  system_service.cpp  telemetry_service.cpp
src/remote_monitoring/test/: test_event_buffer.cpp  test_flight_recorder.cpp  test_idempotency_cache.cpp  test_lease_manager.cpp
src/semantic_perception/: package.xml  setup.py
src/semantic_perception/examples/: performance_analysis.py  uss_nav_integration_demo.py
src/semantic_perception/semantic_perception/: belief_network.py  dataset_loader.py  detector_base.py  end_to_end_evaluation.py  geometry_extractor.py  global_coverage_mask.py  hybrid_planner.py  instance_tracker.py  leiden_segmentation.py  mobileclip_encoder.py  perception_node.py  polyhedron_expansion.py  polyhedron_expansion_optimized.py  projection.py  scg_builder.py  scg_builder_optimized.py  scg_path_planner.py  topology_graph.py  visualization_tools.py  yoloe_detector.py
src/semantic_perception/test/: test_instance_tracker.py
src/semantic_perception/tests/: test_dataset_loader.py  test_end_to_end_evaluation.py  test_gcm.py  test_geometry_enhanced_topology.py  test_hybrid_planner.py  test_polyhedron_debug.py  test_polyhedron_expansion.py  test_scg_builder.py  test_scg_path_planner.py  test_visualization_tools.py
src/semantic_planner/: package.xml
src/semantic_planner/semantic_planner/: action_executor.py  chinese_tokenizer.py  episodic_memory.py  exploration_strategy.py  frontier_scorer.py  goal_resolver.py  implicit_fsm_policy.py  llm_client.py  planner_node.py  topological_memory.py
src/semantic_planner/test/: test_exploration_strategy.py  test_frontier_scorer.py  test_room_object_kg.py
src/vla_nav/: package.xml
src/vla_nav/vla_nav/model/: adacot.py
(+488 files in other folders)
